test/spec/multi-memory/memory.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/multi-memory/memory.wast
;;; ARGS*: --enable-multi-memory
(;; STDOUT ;;;
out/test/spec/multi-memory/memory.wast:17: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.9.wasm:000000c: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/multi-memory/memory.wast:18: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.10.wasm:000000c: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/multi-memory/memory.wast:19: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.11.wasm:000000c: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/multi-memory/memory.wast:22: assert_invalid passed:
  000001b: error: load/store memory 0 out of range 0
out/test/spec/multi-memory/memory.wast:26: assert_invalid passed:
  0000020: error: load/store memory 0 out of range 0
out/test/spec/multi-memory/memory.wast:30: assert_invalid passed:
  000001b: error: load/store memory 0 out of range 0
out/test/spec/multi-memory/memory.wast:34: assert_invalid passed:
  000001d: error: load/store memory 0 out of range 0
out/test/spec/multi-memory/memory.wast:38: assert_invalid passed:
  0000019: error: memory index 0 out of range
out/test/spec/multi-memory/memory.wast:42: assert_invalid passed:
  000001b: error: memory index 0 out of range
out/test/spec/multi-memory/memory.wast:48: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.18.wasm:000000e: error: max pages (0) must be >= initial pages (1)
  000000e: error: OnMemory callback failed
out/test/spec/multi-memory/memory.wast:52: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.19.wasm:000000f: error: initial pages (65537) must be <= (65536)
  000000f: error: OnMemory callback failed
out/test/spec/multi-memory/memory.wast:56: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.20.wasm:0000011: error: initial pages (2147483648) must be <= (65536)
  0000011: error: OnMemory callback failed
out/test/spec/multi-memory/memory.wast:60: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.21.wasm:0000011: error: initial pages (4294967295) must be <= (65536)
  0000011: error: OnMemory callback failed
out/test/spec/multi-memory/memory.wast:64: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.22.wasm:0000010: error: max pages (65537) must be <= (65536)
  0000010: error: OnMemory callback failed
out/test/spec/multi-memory/memory.wast:68: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.23.wasm:0000012: error: max pages (2147483648) must be <= (65536)
  0000012: error: OnMemory callback failed
out/test/spec/multi-memory/memory.wast:72: assert_invalid passed:
  out/test/spec/multi-memory/memory/memory.24.wasm:0000012: error: max pages (4294967295) must be <= (65536)
  0000012: error: OnMemory callback failed
out/test/spec/multi-memory/memory.wast:77: assert_malformed passed:
  out/test/spec/multi-memory/memory/memory.25.wat:1:9: error: invalid int "0x1_0000_0000"
  (memory 0x1_0000_0000)
          ^^^^^^^^^^^^^
out/test/spec/multi-memory/memory.wast:81: assert_malformed passed:
  out/test/spec/multi-memory/memory/memory.26.wat:1:9: error: invalid int "0x1_0000_0000"
  (memory 0x1_0000_0000 0x1_0000_0000)
          ^^^^^^^^^^^^^
  out/test/spec/multi-memory/memory/memory.26.wat:1:23: error: invalid int "0x1_0000_0000"
  (memory 0x1_0000_0000 0x1_0000_0000)
                        ^^^^^^^^^^^^^
out/test/spec/multi-memory/memory.wast:85: assert_malformed passed:
  out/test/spec/multi-memory/memory/memory.27.wat:1:11: error: invalid int "0x1_0000_0000"
  (memory 0 0x1_0000_0000)
            ^^^^^^^^^^^^^
out/test/spec/multi-memory/memory.wast:228: assert_malformed passed:
  out/test/spec/multi-memory/memory/memory.29.wat:1:17: error: redefinition of memory "$foo"
  (memory $foo 1)(memory $foo 1)
                  ^^^^^^
out/test/spec/multi-memory/memory.wast:232: assert_malformed passed:
  out/test/spec/multi-memory/memory/memory.30.wat:1:32: error: redefinition of memory "$foo"
  (import "" "" (memory $foo 1))(memory $foo 1)
                                 ^^^^^^
out/test/spec/multi-memory/memory.wast:236: assert_malformed passed:
  out/test/spec/multi-memory/memory/memory.31.wat:1:32: error: redefinition of memory "$foo"
  (import "" "" (memory $foo 1))(import "" "" (memory $foo 1))
                                 ^^^^^^
77/77 tests passed.
;;; STDOUT ;;)
